--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm ci && npm run build",
+    "predeploy": "npm ci && npm run build && npm audit fix",
     "deploy": "gh-pages -b gh-pages-dev -d build -m \"Auto deploy via npm run deploy\""
   },
   "eslintConfig": {
